@@ -27,6 +27,8 @@ Changes to Version 3.0-0
   o Introduced carPalette() for color selection.
   
   o new bcnPowerAxis() function for bcnPower() transformations.
+  
+  o New vif.merMod() method.
 
   o Various small improvements and fixes.
 
